post: work on layout

--- a/src/ui/product/post/MediaPlayer.pug
+++ b/src/ui/product/post/MediaPlayer.pug
@@ -174,7 +174,7 @@ style.
 		position absolute
 		top 0
 	video
-		aspect-ratio 1
-		height 480px
+		aspect-ratio 16/9
+		width 100%
 		&.video-hide-controls
 			cursor none
