--- a/src/ui/product/generic/Button.pug
+++ b/src/ui/product/generic/Button.pug
@@ -27,9 +27,10 @@ style.
 	a
 	button
 		background rgba(0,0,0,0.05)
+		border-radius 6px
 		display inline-flex
 		flex-flow row-reverse nowrap
-		border-radius 6px
+		font-weight bold
 		gap 5px
 		line-height 18px
 		padding 4px 6px
