post: edit blockquote styling

--- a/src/ui/product/stylesheet.styl
+++ b/src/ui/product/stylesheet.styl
@@ -39,10 +39,10 @@ address
 
 // Verbatim text
 blockquote
-	border-left 2px solid gainsboro
+	background rgba(0,0,0,0.1)
 	margin 1em 0 0 0
 	opacity 0.75
-	padding-inline-start 1ch
+	padding 0.5em 1ch
 code
 	font inherit
 pre
