--- a/src/ui/product/post/Flair.pug
+++ b/src/ui/product/post/Flair.pug
@@ -17,10 +17,12 @@ span.flair(style="background: {color}; color: {(new Color(color)).asContrastHex(
 style.
 	.flair
 		align-items center
-		background rgba(0,0,0,0.1)
-		border-radius 1ch
+		border 1px solid
+		border-radius 4px
 		display inline-flex
-		font-size 12px
+		font-size 10px
+		font-weight bold
+		gap 1ch
 		padding 0 1ch
 	.flair-emoji
 		height 16px
