--- a/src/ui/product/generic/ActionText.pug
+++ b/src/ui/product/generic/ActionText.pug
@@ -5,8 +5,6 @@ button {text}
 
 style.
 	button
-		border 1px solid
-		border-radius 12px
-		height 24px
-		opacity 0.75
-		padding 0 12px
+		color var(--linkcolor)
+		font-size 12px
+		font-weight bold
