--- a/src/ui/product/post/Comment.pug
+++ b/src/ui/product/post/Comment.pug
@@ -35,6 +35,9 @@ style.
 		gap 1ch
 		margin-top 2em
 		position relative
+	.comment-body
+		background var(--commentcolor)
+		padding 1ch
 	:global(.comment-body img)
 		border-radius 6px
 		display inline
@@ -49,6 +52,7 @@ style.
 	.comment-line-separator
 		background linear-gradient(to right, transparent 11px, currentColor 11px, currentColor 13px, transparent 13px)
 		flex 1
+		margin-top 1em
 		opacity 0.1
 	.comment-more-replies
 		margin-top 2em
