ui: modularize listing layout; add easy access for subreddit meta info

--- a/src/ui/infra/Router.pug
+++ b/src/ui/infra/Router.pug
@@ -7,7 +7,7 @@ script.
 	import Post from '../product/post/Post.pug'
 	import Subreddit from '../product/subreddit/Subreddit.pug'
 	import User from '../product/user/User.pug'
-	import Wiki from '../product/wiki/Wiki.pug'
+	import Wiki from '../product/subreddit/Wiki.pug'
 	import parseRoute from './parseRoute.coffee'
 	route = parseRoute(location)
 	navigate = (url, options = { replace: false }) ->
