--- a/src/ui/product/post/Post.pug
+++ b/src/ui/product/post/Post.pug
@@ -88,8 +88,7 @@ svelte:head
 
 style.
 	.post
-		border-left 1px solid var(--separatorcolor)
-		padding 2em 0 2em 48px
+		padding 2em 0 2em 0
 		width 480px
 	.post-additional-images
 		align-items flex-end
