--- a/src/ui/product/stylesheet.styl
+++ b/src/ui/product/stylesheet.styl
@@ -23,6 +23,8 @@
 // General
 *:focus
 	outline-color gold
+.md
+	overflow-wrap anywhere
 
 // Body
 body
@@ -87,6 +89,9 @@ menu
 ol
 ul
 	margin 1em 0 0 0
+	padding 0
+.md ol
+.md ul
 	padding-inline-start 20px
 
 // Headers
@@ -121,13 +126,13 @@ figure
 iframe
 	background black
 	border 0
-	border-radius 6px
+	border-radius 2px
 img
-	border-radius 6px
+	border-radius 2px
 	display block
 video
 	background black
-	border-radius 6px
+	border-radius 2px
 	display block
 
 // Interactive
@@ -141,5 +146,4 @@ input
 	letter-spacing inherit
 	line-height inherit
 	padding 0
-	white-space pre
 	word-spacing inherit
