--- a/src/ui/product/stylesheet.styl
+++ b/src/ui/product/stylesheet.styl
@@ -68,7 +68,7 @@ pre
 
 // Spoilers
 .md-spoiler-text
-	background rgba(0,0,0,1)
+	background var(--color)
 	cursor text
 	padding 0.05em 0
 	opacity 0.5
