--- a/src/ui/product/generic/ListingLayout.pug
+++ b/src/ui/product/generic/ListingLayout.pug
@@ -1,6 +1,9 @@
 script.
+	import AccountSwitcher from '../auth/AccountSwitcher.pug'
 
 .listing-layout
+	.listing-layout-account
+		AccountSwitcher
 	.listing-layout-navigation
 		slot(name='navigation')
 	.listing-layout-selection
@@ -11,6 +14,10 @@ style.
 		display grid
 		grid-template-columns 256px 529px
 		grid-template-rows 100vh
+	.listing-layout-account
+		right 1em
+		position fixed
+		top 1em
 	.listing-layout-navigation
 		height 100%
 		overflow auto
