ui: edit window titles

--- a/src/ui/product/multireddit/Home.pug
+++ b/src/ui/product/multireddit/Home.pug
@@ -9,7 +9,7 @@ script.
 	)
 
 svelte:head
-	title reddit: the frontpage of the internet
+	title reddit: home
 .multireddit
 	.multireddit-name welcome back
 	ol.multireddit-posts
