--- a/src/ui/product/multireddit/Multireddit.pug
+++ b/src/ui/product/multireddit/Multireddit.pug
@@ -15,7 +15,7 @@ script.
 	)
 
 svelte:head
-	title {name}
+	title multi: {user_name}: {name}
 .multireddit
 	.multireddit-name {user_name} / {name}
 	ol.multireddit-posts
