--- a/src/ui/product/multireddit/Popular.pug
+++ b/src/ui/product/multireddit/Popular.pug
@@ -9,7 +9,7 @@ script.
 	)
 
 svelte:head
-	title popular
+	title reddit: popular
 .multireddit
 	.multireddit-name what's poppin
 	ol.multireddit-posts
